--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>collecte Sang</title>
-    <link rel="stylesheet" href="style.css">
-   
-</head>
-<body>
-    <h2>collecte sang</h2>
-    <ul>
-        <li>
-            <a href="#">home</a>
-        </li>
-        <li>
-            <a href="#">blog</a>
-        </li>
-        <li>
-            <a href="#">service</a>
-        </li>
-    </ul>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Collecte Sang</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="log">
+        <img src="images/IMG-20240505-WA0024.jpg" alt="" />
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Donneur</a>
+          </li>
+          <li>
+            <button>Log In</button>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section class="hero">
+      <div class="content">
+        <h3>Collecte <span>de sang </span>au burundi</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+          amet totam laboriosam incidunt est quo officia molestias asperiores
+          ducimus suscipit itaque optio impedit aliquid natus omnis voluptatum,
+          consectetur eaque doloremque.
+        </p>
+      </div>
+      <div class="img">
+        <img src="images/IMG-20240505-WA0023.jpg" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
