--- a/templates/centreCollecte.html
+++ b/templates/centreCollecte.html
@@ -18,7 +18,7 @@
         <div class="titre">
           <h1>{{Centre.nom}}</h1>
           <p>{{Centre.adresse}}</p>
-          <button onclick="window.location.href='{% url 'login.html' Centre.id %}'">s'inscrire</button>
+          <button onclick="window.location.href='{% url 'login' %}'">s'inscrire</button>
 
 
         </div>
