--- a/templates/receveur.html
+++ b/templates/receveur.html
@@ -12,23 +12,12 @@
     <section class="receveur">
       <div class="form">
         <h5>Enregitre un nouveau receveur</h5>
-        <form action="" method="post">
-          <input type="text" placeholder=" Entre le Nom du receveur" />
-          <input type="text" placeholder=" Entre le Prenom du receveur" />
-          <input
-            type="text"
-            placeholder=" Entre la date de naissance du receveur"
-          />
-          <input
-            type="text"
-            placeholder=" Entre le groupe sanguin du receveur"
-          />
-          <input
-            type="number"
-            placeholder=" Entre le groupe quantite du receveur"
-          />
-          <button>Ajouter</button>
+          <form action="" method="post">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button type="submit">Ajouter</button>
         </form>
+
       </div>
       <div class="table">
         <table>
